--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@ Please see <a href="http://vision.cs.utexas.edu/projects/adapted_attributes/">th
 
 <!-- Goal -->
 <h3>Abstract</h3>
-
-One or two sentences on the motivation behind the problem you are solving. One or two sentences describing the approach you took. One or two sentences on the main result you obtained.
+The Unmanned Aerial Vehicles (UAVs) are rapidly emerging with their applications ranging from surveillance to disaster response. One such area is real-time traffic monitoring where UAVs with their vision based methods can play a significant role in streamlining traffic flow, mitigating congestion and quick emergency response in accidents. However, such an implementation is accompanied by challenges related to accuracy and computational overload. Therefore, a comprehensive comparison of available methodologies in computer vision is essential to determine the most effective approach for traffic management tasks.
 <br><br>
 <!-- figure -->
 <h3>Teaser figure</h3>
