--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ Annotations: It has been made sure that the images for detection need to have a 
 </div>
 <br><br>
 <p class="justified">
-<strong>DOTA:</strong> A Large-scale Dataset for Object Detection in Aerial Images: []: The DOTA images are collected from the Google Earth, GF-2 and JL-1 satellite provided by the China Centre for Resources Satellite Data and Application, and aerial images provided by CycloMedia B.V. DOTA consists of RGB images and grayscale images. The dataset mainly consists of detection of large vehicles like trucks and aircrafts. Examples of images are:
+<strong>DOTA:</strong> A Large-scale Dataset for Object Detection in Aerial Images: The DOTA images are collected from the Google Earth, GF-2 and JL-1 satellite provided by the China Centre for Resources Satellite Data and Application, and aerial images provided by CycloMedia B.V. DOTA consists of RGB images and grayscale images. The dataset mainly consists of detection of large vehicles like trucks and aircrafts. Examples of images are:
 <p class="justified">
 	<div style="text-align: center;">
   <img src="Drone_3.png" alt="Image Description">
