--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ color: #FF9900;
 <!-- Goal -->
 <h3>Abstract</h3>
 <p class="justified">
-The Unmanned Aerial Vehicles (UAVs) are rapidly emerging with their applications ranging from surveillance to disaster response. One such area is real-time traffic monitoring where UAVs with their vision based methods can play a significant role in streamlining traffic flow, mitigating congestion and quick emergency response in accidents (Liang Wang, Fangliang Chen, Huiming Yin, December 2016) However, such an implementation is accompanied by challenges related to accuracy and computational overload. Therefore, a comprehensive comparison of available methodologies in computer vision is essential to determine the most effective approach for traffic management tasks.
+The Unmanned Aerial Vehicles (UAVs) are rapidly emerging with their applications ranging from surveillance to disaster response. One such area is real-time traffic monitoring where UAVs with their vision based methods can play a significant role in streamlining traffic flow, mitigating congestion and quick emergency response in accidents<a href="https://www.sciencedirect.com/science/article/abs/pii/S0926580516300887"> (Liang Wang, Fangliang Chen, Huiming Yin, December 2016)</a> However, such an implementation is accompanied by challenges related to accuracy and computational overload. Therefore, a comprehensive comparison of available methodologies in computer vision is essential to determine the most effective approach for traffic management tasks.
 </p>
 
 
@@ -104,7 +104,7 @@ Annotations: It has been made sure that the images for detection need to have a 
 </div>
 <br><br>
 <p class="justified">
-<strong>DOTA:</strong> A Large-scale Dataset for Object Detection in Aerial Images: The DOTA images are collected from the Google Earth, GF-2 and JL-1 satellite provided by the China Centre for Resources Satellite Data and Application, and aerial images provided by CycloMedia B.V. DOTA consists of RGB images and grayscale images. The dataset mainly consists of detection of large vehicles like trucks and aircrafts. Examples of images are:
+<strong>DOTA:</strong> A Large-scale Dataset for Object Detection in Aerial Images: []: The DOTA images are collected from the Google Earth, GF-2 and JL-1 satellite provided by the China Centre for Resources Satellite Data and Application, and aerial images provided by CycloMedia B.V. DOTA consists of RGB images and grayscale images. The dataset mainly consists of detection of large vehicles like trucks and aircrafts. Examples of images are:
 <p class="justified">
 	<div style="text-align: center;">
   <img src="Drone_3.png" alt="Image Description">
@@ -136,10 +136,13 @@ DeepSort is integrated with the YOLOv7 detector. Once vehicles are detected by Y
 <h3>Traditional computer vision approach</h3>
 <p class="justified">
 <strong>Haar cascade:</strong><br>
-One of the traditional computer vision approach is the Haar cascade algorithm (P. Viola, M. Jones, December 2001) to detect vehicles. Haar Cascade method is a traditional computer vision technique used for object detection. It is based on Haar-like features and is particularly known for its efficiency in detecting objects, including vehicles. A pre-trained model (xml) that can be used with the opencv cascadeclassifier method is used. Whenever a vehicle is detected, the model will make a bounding box over the detected vehicles. 
-
-In subsequent frames, optical flow algorithm is used to estimate the motion of these bounding boxes or the contents within the boxes. Optical flow will provide with motion vectors that describe how each point within the bounding box has moved from one frame to the next.
+One of the traditional computer vision approach is the Haar cascade algorithm <a href="https://ieeexplore.ieee.org/document/990517">(P. Viola, M. Jones, December 2001) </a>to detect vehicles. Haar Cascade method is a traditional computer vision technique used for object detection. It is based on Haar-like features and is particularly known for its efficiency in detecting objects, including vehicles. A pre-trained model (xml) that can be used with the opencv cascadeclassifier method is used. Whenever a vehicle is detected, the model will make a bounding box over the detected vehicles. 
 <p/>
+<br><br>
+
+<p class="justified">
+<strong>Optical Flow:</strong><br>
+In subsequent frames, the optical flow algorithm comes into play to precisely assess the movement of the bounding boxes or the objects within these boxes. Optical flow provides motion vectors that vividly illustrate how each individual point within the bounding box has transitioned from one frame to the next. These motion vectors offer critical information about the direction and extent of the motion for every point contained within the bounding box. Leveraging this data, it becomes possible to make informed predictions regarding the likely position of the vehicle in the upcoming frame.<p/>
 <br><br>
 
 <h3>Reference</h3>
